# ocaml_borrow_checker

./: README.md  demo.sh  dune-project  hw4.rkt  ocaml_borrow_checker.opam  prog.sexp  prog2.sexp  test.sexp  test2.sexp
demos/: 1-1imm_borrow.larry  1-2mut_borrow.larry  1imm_borrow.larry  2-1multi_mut_borrow.larry  2-2mixed_borrow.larry  2mut_borrow.larry  3-1let_moves.larry  3-2bad_let_moves.larry  3multi_mut_borrow.larry  4-1func_moves.larry  4-2bad_func_moves.larry  4mixed_borrow.larry  5-1set_type_check.larry  5-2bad_type_check.larry  6-1if_types.larry  6-2if_bool_cond.larry  6-3bad_if.larry  6bad_let_moves.larry  7-1rule_1.larry  7-2rule_2.larry  7func_moves.larry  8bad_func_moves.larry
lib/: analyze.ml  dune  interp.ml  parse.ml
test/: dune
